<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".module.userprofile.view.UserProfile"
    tools:showIn="@layout/activity_user_profile">

    <RelativeLayout
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/activity_user_profile_civ_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="@string/click_to_change_image" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/activity_user_profile_et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/activity_user_profile_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenter_password" />

    <EditText
        android:id="@+id/activity_user_profile_et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@color/colorAccent"
        android:text="@string/leave_password_empty_if_you_are_not_about_changing_your_password"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_user_profile_btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save" />

</LinearLayout>
