<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".module.booking.view.Booking"
    tools:showIn="@layout/activity_booking">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/activity_booking_image_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"/>

    <TextView
        android:id="@+id/activity_booking_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date_label"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/activity_booking_et_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_booking_img_btn_calendar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_calendar"
            android:scaleType="fitCenter"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        android:layout_marginBottom="5dp" />
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/activity_booking_et_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/activity_booking_img_btn_time"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_time"
            android:scaleType="fitCenter"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_booking_btn_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/book_now"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>
